# DocGet

./: .env  Dockerfile  README.md  pyproject.toml
app/: main.py
app/models/: schemas.py
app/routers/: chat.py  documents.py  modelos.py  skills.py
app/services/: chat_service.py  document_generator.py  file_reader.py  gemini_service.py  skill_loader.py  web_search.py
app/templates/: index.html
assets/cripto/: Codigos.md  index.md
assets/temes/: Ejercicios en clase26-05-2026.docx  Experimento para realizar- Leyes de Newton.docx  ejercicios en clase(19-05-26).docx  ejercicios en clase2-06-2026.docx
data/cajanegra/: AGENTS.md  app.json  doc_b0051971.md  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
data/modelos/: cangrejo.json  docxix.json
data/output/: Análisis_de_la_serie_animada_de_Batman.docx  Análisis_del_Proyecto_`snakereact`_y_su_Arquitectu.docx  Análisis_y_Aplicación_de_Conceptos_en_Documento_'J.docx  Análisis_y_Contexto_de_la_Serie_Animada_'Los_Picap.docx  Análisis_y_Desafíos_de_la_Arquitectura_de_Teléfono.docx  Documentacion_Caja_Negra.docx  Documento_de_Proyecto:_Videojuego_Educativo_con_In.docx  Documento_de_Prueba:_Implementación_de_un_Sistema_.docx  Documento_de_Prueba_DocGent.docx  Documento_de_Prueba_DocXIX.docx  El_Lore_Completo_de_las_Tortugas_Ninja_Adolescente.docx  Guía_completa_sobre_gatos:_Comportamiento,_cuidado.docx  Implementación_de_un_Sistema_de_Monitoreo_de_Hardw.docx  (+17 more)
docs/: index.md
tests/: conftest.py  test_chat.py  test_documents.py  test_file_reader.py  test_health.py  test_skills.py
(+43 files in other folders)
