[project]
name = "docgent"
version = "0.1.0"
description = "Servicio web para generar documentos .docx con skills e IA"
authors = [
    {name = "User"}
]
package-mode = false
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "google-genai (>=2.7.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ddgs (>=9.14.4,<10.0.0)"
]


[tool.poetry.scripts]
docgent = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
